Make sure the images stay within the view on mobile

--- a/style.css
+++ b/style.css
@@ -93,6 +93,11 @@
 	  display: none;
   }
   
+  img {
+	  max-width: 100%;
+	  height: auto;
+  }
+  
 /********** LINKS **********/
 
   a,
